tests/cases/parser/literals/characters/unknown_escape_sequence.stderr
error: unrecognised character escape sequence `j`
 --> $DIR/unknown_escape_sequence.hash:3:8
2 |   
3 |   k := '\j';
  |          ^ here
